# pass-vault

./: .gitignore  Cargo.toml
.claude/: settings.local.json
src/: app.rs  main.rs
src/ui/: bridge.rs  handlers.rs  mod.rs
src/vault/: crypto.rs  db.rs  mod.rs  model.rs  search.rs
ui/: app.slint  globals.slint
ui/components/: confirm-dialog.slint  entry-detail.slint  entry-list.slint  generate-dialog.slint  login-dialog.slint
