[package]
name = "pass-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.15"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
rfd = "0.14"
hex = "0.4"
dirs = "5"

[build-dependencies]
slint-build = "1.15"
